[gd_scene load_steps=7 format=3 uid="uid://bnd6ismae3xx7"]

[ext_resource type="Script" path="res://Script/Screens.gd" id="1_qtphs"]
[ext_resource type="Texture2D" uid="uid://vjlt6k2iohvb" path="res://Asset/Textures/UI/gear.png" id="2_nmn6m"]
[ext_resource type="PackedScene" uid="uid://dhwk8kve85pjl" path="res://Scene/title_screen.tscn" id="3_dtan5"]
[ext_resource type="PackedScene" uid="uid://blde7tastp36j" path="res://Scene/screen_pause.tscn" id="4_l8g04"]
[ext_resource type="PackedScene" uid="uid://cpm1t7f8vuuk1" path="res://Scene/game_over.tscn" id="5_dai3j"]

[sub_resource type="LabelSettings" id="LabelSettings_2ldaw"]
font_color = Color(1, 0.992157, 1, 1)

[node name="Screens" type="CanvasLayer"]
layer = 101
script = ExtResource("1_qtphs")

[node name="Debug" type="Control" parent="."]
z_index = 4096
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConsoleLog" type="Control" parent="Debug" groups=["debug_console"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlackBk" type="ColorRect" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.666667)

[node name="BuildNoLabel" type="Label" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 240.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Build 0.1.o
"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = 39.0
offset_right = -20.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Debug/ConsoleLog/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LogLabel" type="Label" parent="Debug/ConsoleLog/ScrollContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_2ldaw")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="ToggleConsole" type="TextureButton" parent="Debug"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -45.9999
offset_right = 100.0
offset_bottom = 54.0001
grow_vertical = 0
scale = Vector2(0.432922, 0.432922)
texture_normal = ExtResource("2_nmn6m")
ignore_texture_size = true
stretch_mode = 0

[node name="TitleScreen" parent="." instance=ExtResource("3_dtan5")]

[node name="ScreenPause" parent="." instance=ExtResource("4_l8g04")]

[node name="GameOver" parent="." instance=ExtResource("5_dai3j")]

[connection signal="pressed" from="Debug/ToggleConsole" to="." method="_on_toggle_console_pressed"]
